# cpp-sfml-002-board-with-sprite

./: CMakeLists.txt  main.cpp
